feat: reconstruct locations from scout photos
